# Proyecto-de-Grado-Caballero-Reyes

./: .env  .gitignore  README.md  biome.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.cargo/: config.toml
analysis/: Cargo.toml  analyze_results.py  try copy.rs
analysis/src/: main.rs
harness/: Cargo.toml  harness.py
harness/src/: main.rs
scripts/: dummy_bot_batch_records.ps1  dummy_bot_open_project.ps1  dummy_bot_store_record.ps1  run_tests.ps1
src/: App.tsx  main.tsx
src-tauri/: .taurignore  Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/.respald/: .rs
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  sample.exe.manifest  windows-app-manifest.xml
src-tauri/src/db/: db.rs  mod.rs
src-tauri/src/db/migrations/: users.rs
src-tauri/src/permissions/: mod.rs  read.rs  remove.rs  write.rs
src-tauri/src/process/: background.rs  excel.rs  getpath.rs  logs.rs  mod.rs  mode.rs  state_sync.rs  system_info.rs  try.rs  watch.rs  watch_file.rs
src/api/: db.ts
src/components/: BannerEditor.tsx  BannerForm.tsx  BannerList.tsx  FileItem.tsx  FolderExplorerButton.tsx  FormProyects.tsx  HandleIcons.tsx  OriginFolder.tsx  ProyectsList.tsx  SpecialFileViewer.tsx
src/components/ExcelView/: ExcelView.tsx  FileExplorerButton.tsx
src/components/GenericTextViewer/: GenericTextViewer.tsx
src/components/LogViewer/: CollapsibleLogSection.tsx  LogAnalysisViewer copy.tsx  LogAnalysisViewer.tsx  LogDeletionWarning.tsx  TabbedLogViewer.scss  TabbedLogViewer.tsx  VirtualizeLogGrid.tsx
src/components/Menu/: Menu.scss  Menu.tsx
src/components/SystemInfoBox/: SystemInfoBox.tsx
src/components/TextFileViewer/: CollapsibleLogSection.tsx  TextFileViewer copy.tsx  TextFileViewer.scss  TextFileViewer.tsx
src/components/TreeItem/: TreeItem.css  TreeItem.tsx
src/components/_deprecated/: FileItem.tsx  FolderItem.tsx  TextFileViewer copy 2.tsx  VirtualizeLogGrid copy.tsx
src/config/: index.ts  initializePermissions.ts  initializeSystemTry.ts  resizeLayout.ts  resizeTable.ts
src/store/: appStore.ts  contentPathStore.ts
src/styles/: App.css  App.scss
src/utils/: logParser.ts
