[package]
name = "harness"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "net", "io-util", "time", "sync"] }
clap = { version = "4", features = ["derive"] }
sysinfo = "0.29"
sha2 = "0.10"
csv = "1.2"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
notify = "6"
futures-util = "0.3"
tokio-tungstenite = "0.20"