[package]
name = "proyecto-monitoreo-bots"
version = "0.1.0"
description = "A Tauri App"
authors = ["Jesus Caballero, Tania Reyes"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "proyecto_monitoreo_bots_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = { version = "2.0.0", features = ["watch"] }
tauri-plugin-dialog = "2"
regex = "1.11.1"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1"
notify = "6.1"
embed-manifest = "1"
rfd = { version = "0.12" }
